# netcoredbg-mcp

./: .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  RELEASE_NOTES.md  TECHNICAL_DEBT.md  netcoredbg-mcp.sln  pyproject.toml  test_variables.py
.agent/: CONTINUITY-CODER.md  LESSONS_LEARNED.md
.agent/arch/: README.md  _TEMPLATE.md
.agent/arch/SPEC_PROPOSAL/: README.md
.agent/arch/decisions/: README.md
.agent/guides/: TESTING_GUIDELINES.md
.agent/skills/: skill-rules.json
.agent/skills/architecture/: SKILL.md
.agent/skills/coding/: SKILL.md
.agent/skills/debugging/: SKILL.md
.agent/skills/integration/: SKILL.md
.agent/skills/recovery/: SKILL.md
.agent/specs/flaui-pattern-expansion/: spec.md  tasks.md
.agent/specs/ui-input-primitives-expansion/: spec.md  tasks.md
.claude/: settings.json  settings.local.json
.claude/hooks/: HOOKS_DESIGN.md  analyze-prompts.js  continuity-check.js  continuity-reminder.js  package.json  skill-activation-prompt.cmd  skill-activation-prompt.js  skill-activation-prompt.ts
.github/workflows/: publish.yml
.serena/: project.yml
bridge/: FlaUIBridge.csproj  JsonRpcHandler.cs  Program.cs  app.manifest
bridge/Commands/: ClickCommands.cs  ClipboardCommands.cs  ElementCommands.cs  FocusCommands.cs  GridCommands.DragRowToRow.cs  GridCommands.EnsureVisible.cs  GridCommands.cs  HoverCommands.cs  InputCommands.cs  InputSignature.cs  KeySequenceCommands.cs  ListCommands.cs  ModifierCommands.cs  PatternCommands.cs  PingCommand.cs  ScreenshotCommands.cs  SelectionCommands.cs  SnapshotCommands.cs  StealthCommands.cs  SystemEventCommands.cs  TransformCommands.cs  VirtualizationCommands.cs  WindowCommands.cs  WindowResolver.cs
docs/: PRODUCTION-TESTING-PLAYBOOK.md  RELEASE-PROTOCOL.md
docs/dap-protocol/: README.md  contributing.md  overview.md
docs/examples/: runtime-smoke-app-diagnostics-poll.json  runtime-smoke-app-diagnostics-wait-json.json  runtime-smoke-app-diagnostics.json  runtime-smoke-novascript-action-oracle-app-diagnostics.json  runtime-smoke-oracle-pack.json  runtime-smoke-semantic-probe.json  runtime-smoke-tracepoint-guardrail.json  runtime-smoke-v2-drag-drop-grid.json  runtime-smoke-v2-handwritten.json  runtime-smoke-v2-matrix-toggle.json  runtime-smoke-v2-selector-safety.json  runtime-smoke-v2-state-only-file-json-matrix.json  runtime-smoke-wpf-workflow-plan.json
docs/reproduction-scenarios/: issues-backlog-2026-06-15.md  novascript-action-oracle-app-diagnostics-replay-2026-06-21.json  novascript-action-oracle-app-diagnostics-replay-2026-06-21.md  novascript-cr003-replay-2026-06-15.json  novascript-cr003-replay-2026-06-15.md
host/NetCoreDbg.Mcp.Host/: MuxCapabilityRelay.cs  NativePrompts.cs  NativePromptsBuilders.cs  NativePromptsContent.cs  NativePromptsPlaybooks.cs  NetCoreDbg.Mcp.Host.csproj  Program.cs  ProgressLoggingRelay.cs  PythonBackendProcess.cs  RelayComposition.cs  RelayRouteCatalog.cs  RelaySession.cs  ResourceUpdatesRelay.cs  ResourcesRelay.cs  RootsRelay.cs  ToolsRelay.cs
host/NetCoreDbg.Mcp.Host.Tests/: ComposedFixture.cs  DuplexChannel.cs  FakePythonServer.cs  MuxCapabilityRelayHostTests.cs  MuxCapabilityRelayTests.cs  MuxMetadataForwardingTests.cs  NetCoreDbg.Mcp.Host.Tests.csproj  ProductionCompositionTests.cs  ProgressLoggingComposition.cs  ProgressLoggingRelayTests.cs  ResourceUpdatesRealPythonTests.cs  ResourceUpdatesRelayTests.cs  ResourcesRealPythonTests.cs  ResourcesRelayTests.cs  ResourcesTestComposition.cs  ReverseRouteAndLifecycleTests.cs  RootsRelayRealPythonTests.cs  RootsRelayTests.cs  ToolsCatalogContractTests.cs
scripts/: build-netcoredbg-enc.ps1
src/netcoredbg_mcp/: __init__.py  __main__.py  cli.py  code_search.py  launch_profiles.py  mux.py  process_registry.py  prompts.py  resource_updates.py  resources.py  response.py  server.py
src/netcoredbg_mcp/backends/: __init__.py  protocol.py
src/netcoredbg_mcp/dap/: __init__.py  client.py  events.py  protocol.py
src/netcoredbg_mcp/enc/: __init__.py  applier.py  compiler.py  detect.py
src/netcoredbg_mcp/session/: __init__.py  freshness.py  hygiene.py  instrumentation.py  manager.py  output_assertions.py  runtime_smoke.py  runtime_smoke_operations.py  runtime_smoke_schema.py  snapshots.py  state.py  tracepoint_policy.py  tracepoints.py
src/netcoredbg_mcp/setup/: __init__.py  bridge.py  dbgshim.py  home.py  netcoredbg.py  (+1 more)
test-app/: Program.cs  test-app.csproj
tests/: __init__.py  conftest.py  smoke_debuggee_activity.py  smoke_test.py  smoke_test_manual.py  test_app_type.py  test_backends.py  test_breakpoint_events.py  test_bridge_textbox_state_contract.py  test_build_cleanup.py  test_build_manager.py  test_build_policy.py  test_build_session.py  test_build_state.py  test_cli.py  test_client.py  test_code_search.py  test_collection_analyzer.py  test_context_tools.py  test_dbgshim.py  test_debug_freshness.py  test_debug_launch_preflight.py  test_debuggee_activity.py  test_debuggee_liveness.py  test_element_ranking.py  test_enc_apply.py  test_enc_compiler.py  test_enc_detect.py  test_enc_setup_cli.py  test_event_coverage.py  test_hit_counting.py  test_host_mux_ownership.py  test_host_proxy.py  test_hover_bridge_contract.py  test_input_primitives.py  test_inspection_tools.py  test_instrumentation_groups.py  test_launch_profiles.py  test_mcp_compliance.py  test_memory_tools.py  (+75 more)
tests/critical/: conftest.py  test_host_proxy_critical.py  test_mux_ownership_critical.py  test_release_critical.py  test_resources_relay_critical.py  test_runtime_smoke_v2_critical.py  test_stealth_critical.py
tests/fixtures/: fd002_notification_probe_server.py
tests/test_runtime_smoke_v2_probes/: helpers.py  test_app_diagnostics.py  test_debug_evaluate.py  test_debug_tracepoint.py  test_file_json.py  test_oracle_pack.py  test_output_field.py  test_output_since.py  test_process_metric.py  test_ui_grid.py  test_ui_grid_viewport.py  test_ui_property.py  test_ui_text.py
tools/enc_compiler/: BaselineArtifacts.cs  DeltaEmitter.cs  EncCompiler.csproj  FrameworkReferenceResolver.cs  Program.cs
(+113 files in other folders)
