[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netcoredbg-mcp"
version = "0.15.1"
description = "MCP server for debugging C#/.NET code using netcoredbg"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "netcoredbg-mcp contributors" }
]
keywords = ["mcp", "debugging", "dotnet", "csharp", "netcoredbg", "dap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp>=1.5.0,<2.0.0",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "Pillow>=10.0; sys_platform == 'win32'",
    "jsonpath-ng>=1.8.0,<2.0.0",
    "psutil>=7.2.2,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
netcoredbg-mcp = "netcoredbg_mcp.__main__:run"

[project.urls]
Homepage = "https://github.com/thebtf/netcoredbg-mcp"
Repository = "https://github.com/thebtf/netcoredbg-mcp"
Issues = "https://github.com/thebtf/netcoredbg-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/netcoredbg_mcp"]

[tool.hatch.build.targets.wheel.force-include]
# Include FlaUI bridge C# source for auto-build on user's machine
"bridge/Commands" = "netcoredbg_mcp/bridge/Commands"
"bridge/FlaUIBridge.csproj" = "netcoredbg_mcp/bridge/FlaUIBridge.csproj"
"bridge/JsonRpcHandler.cs" = "netcoredbg_mcp/bridge/JsonRpcHandler.cs"
"bridge/Program.cs" = "netcoredbg_mcp/bridge/Program.cs"
"bridge/app.manifest" = "netcoredbg_mcp/bridge/app.manifest"
"scripts/build-netcoredbg-enc.ps1" = "netcoredbg_mcp/scripts/build-netcoredbg-enc.ps1"
"tools/enc_compiler/EncCompiler.csproj" = "netcoredbg_mcp/tools/enc_compiler/EncCompiler.csproj"
"tools/enc_compiler/DeltaEmitter.cs" = "netcoredbg_mcp/tools/enc_compiler/DeltaEmitter.cs"
"tools/enc_compiler/Program.cs" = "netcoredbg_mcp/tools/enc_compiler/Program.cs"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/netcoredbg_mcp/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
# The legacy codebase is not strict-clean yet; keep full-src mypy as a
# production gate and ratchet concrete type errors without hiding entire modules.
ignore_missing_imports = true
disallow_any_generics = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_redundant_casts = false
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "critical: project-wide release gate tests",
]
